[gd_scene load_steps=3 format=3 uid="uid://cn2o1sapp7um6"]

[ext_resource type="Script" path="res://Scripts/GUI/video_ui.gd" id="1_ea8vp"]
[ext_resource type="Texture2D" uid="uid://bol2cnilxxtjw" path="res://Assets/background_image.png" id="2_8nj1v"]

[node name="video_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ea8vp")

[node name="BackgroundImage" type="TextureRect" parent="."]
offset_right = 2029.68
offset_bottom = 1100.0
texture = ExtResource("2_8nj1v")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullscreenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fullscreen
"

[node name="BorderlessButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Windowed"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -131.0
offset_right = 22.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BorderlessButton" to="." method="_on_borderless_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
